--- a/functions/package.json
+++ b/functions/package.json
@@ -1,29 +1,32 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "tslint --project tsconfig.json",
     "build": "tsc",
-    "serve": "npm run build && firebase serve --only functions",
+    "build:watch": "tsc --watch",
+    "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "10"
+    "node": "16"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0",
+    "firebase-admin": "^10.2.0",
+    "firebase-functions": "^3.22.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "stripe": "^8.43.0"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "stripe": "^9.16.0"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.21.0",
+    "typescript": "^4.7.4",
     "firebase-functions-test": "^0.1.6"
   },
   "private": true
