--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -7,13 +7,11 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017",
+    "target": "es2022",
     "lib": ["ESNext"],
     "strictNullChecks": false,
     "esModuleInterop": true
   },
   "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
