--- a/server/package.json
+++ b/server/package.json
@@ -13,17 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "firebase-admin": "^8.6.0",
-    "stripe": "^8.43.0"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "firebase-admin": "^11.0.0",
+    "stripe": "^9.16.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/cors": "^2.8.6",
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.3",
-    "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "@types/express": "^4.17.13",
+    "@types/cors": "^2.8.12",
+    "concurrently": "^7.3.0",
+    "nodemon": "^2.0.19",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.21.0",
+    "typescript": "^4.7.4"
   }
 }
